tests/parse-fail/bad_module_closing_brace.fl.0.exp
Error: bad_module_closing_brace.fl(1,13): Unexpected end of token stream 
pub mod foo {
            ^ 
